exports[`Svg Snapshot tests default state (empty) 1`] = `
<div
  className=""
  dangerouslySetInnerHTML={
    Object {
      "__html": "/icon.svg",
    }
  } />
`;

exports[`Svg Snapshot tests populated attributes 1`] = `
<div
  className="my-class"
  dangerouslySetInnerHTML={
    Object {
      "__html": "/icon.svg",
    }
  } />
`;
